Projeto completo com a implementacao de um usuario padrao que fica responsavel por gerar o token para ser possivel criar,deleter,buscar e alterar dentro do crud e com swagger funcional
