# src/controller/deleteUser.go
@@ -10,6 +10,18 @@ import (
 	"go.uber.org/zap"
 )
 
+// DeleteUser deletes an user with the specified ID 
+// @Summary Delete User
+// @Description Delete an user based on the ID provided as a parameter.
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param userId path string true "ID of the user to be deleted"
+// @Success 200
+// @Param Authorization header string true "Insert your acess token" default(Bearer <Add access token here>)
+// @Failure 400 {object} rest_err.RestErr
+// @Failure 500 {object} rest_err.RestErr
+// @Router /deleteUser/{userId} [delete]
 func (uc *userControllerInterface) DeleteUser(c *gin.Context) {
 	logger.Info("Init DeleteUser controller",
 		zap.String("journey", "deleteUser"),
