# src/controller/findUser.go
@@ -12,6 +12,18 @@ import (
 	"go.uber.org/zap"
 )
 
+// FindUserByID retrieves user information based on the provided user ID. 
+// @Summary Find User by ID
+// @Description Retrieves user details based on the ID provided as a parameter.
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param userId path string true "ID of the user to be retrieved"
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Success 200 {object} response.UserResponse "User information retrieved successfully"
+// @Success 400 {object} rest_err.RestErr "Error: Invalid user ID"
+// @Success 404 {object} rest_err.RestErr "User not found"
+// @Router /getUserById/{userId} [get]
 func (uc *userControllerInterface) FindUserByID(c *gin.Context) {
 	logger.Info("Init findUserByID controller", zap.String("journey", "FindUserByID"))
 
@@ -41,6 +53,19 @@ func (uc *userControllerInterface) FindUserByID(c *gin.Context) {
 	c.JSON(http.StatusOK, view.ConvertDomainToResponse(userDomain))
 }
 
+
+// FindUserByEmail retrieves user information based on the provided user Email. 
+// @Summary Find User by Email
+// @Description Retrieves user details based on the Email provided as a parameter.
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param userEmail path string true "Email of the user to be retrieved"
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Success 200 {object} response.UserResponse "User information retrieved successfully"
+// @Failure 400 {object} rest_err.RestErr "Error: Invalid user Email"
+// @Failure 404 {object} rest_err.RestErr "User not found"
+// @Router /getUserByEmail/{userEmail} [get]
 func (uc *userControllerInterface) FindUserByEmail(c *gin.Context) {
 	logger.Info("Init findUserByEmail controller", zap.String("journey", "FindUserByEmail"))
 
