# src/controller/routes/routes.go
@@ -10,12 +10,12 @@ import (
 )
 
 func InitRoutes(r *gin.RouterGroup, userController controller.UserControllerInterface) {
-	
+
 	r.GET("/getUserById/:userId", model.VerifyTokenMiddleware, userController.FindUserByID)
 	r.GET("/getUserByEmail/:userEmail", model.VerifyTokenMiddleware, userController.FindUserByEmail)
-	r.POST("/createUser", userController.CreateUser)
-	r.PUT("/updateUser/:userId", userController.UpdateUser)
-	r.DELETE("/deleteUser/:userId", userController.DeleteUser)
+	r.POST("/createUser", model.VerifyTokenMiddleware, userController.CreateUser)
+	r.PUT("/updateUser/:userId", model.VerifyTokenMiddleware, userController.UpdateUser)
+	r.DELETE("/deleteUser/:userId", model.VerifyTokenMiddleware, userController.DeleteUser)
 
 	r.POST("/login", userController.LoginUser)
 
