# src/controller/updateUser.go
@@ -13,13 +13,34 @@ import (
 	"go.uber.org/zap"
 )
 
+// UpdateUser updates user information with the specified ID.
+// @Summary Update User
+// @Description Updates user details based on the ID provided as a parameter
+// @Tags Users
+// @Accept json
+// @Produce json
+// @Param userId path string true "ID of the user to be updated"
+// @Param userRequest body request.UserUpdateRequest true "User information for update"
+// @Param Authorization header string true "Insert your access token" default(Bearer <Add access token here>)
+// @Success 200
+// @Failure 400 {object} rest_err.RestErr
+// @Failure 500 {object} rest_err.RestErr
+// @Router /updateUser/{userId} [put]
 func (uc *userControllerInterface) UpdateUser(c *gin.Context) {
 	logger.Info("Init UpdateUser controller",
 		zap.String("journey", "updateUser"),
 	)
-	var userRequest request.UserUpdateRequest
 
-	if err := c.ShouldBindJSON(&userRequest); err != nil{
+	userId := c.Param("userId")
+
+	if _, err := primitive.ObjectIDFromHex(userId); err != nil {
+		errRest := rest_err.NewBadRequestError("Invalid userId, must be a hex value")
+		c.JSON(errRest.Code, errRest)
+		return
+	}
+
+	var userRequest request.UserUpdateRequest
+	if err := c.ShouldBindJSON(&userRequest); err != nil {
 		logger.Error("Error trying to validate user info", err,
 			zap.String("journey", "updateUser"))
 		errRest := validation.ValidateUserError(err)
@@ -28,28 +49,21 @@ func (uc *userControllerInterface) UpdateUser(c *gin.Context) {
 		return
 	}
 
-	userId := c.Param("userId")
-	if _, err:= primitive.ObjectIDFromHex(userId); err != nil {
-		errRest := rest_err.NewBadRequestError("Invalid userId, must be a hex value")
-		c.JSON(errRest.Code, errRest)
-		return
-	}
-
 	domain := model.NewUserUpdateDomain(
-		userRequest.Name, 
+		userRequest.Name,
 		userRequest.Age)
 
-	err := uc.service.UpdateUserService(userId, domain);	
+	err := uc.service.UpdateUserService(userId, domain)
 	if err != nil {
 		logger.Error("Error trying to call CreateUser service", err,
 			zap.String("journey", "updateUser"))
 		c.JSON(err.Code, err)
-		return 
+		return
 	}
 
 	logger.Info("updateUser controller executed successfully",
 		zap.String("userId", userId),
 		zap.String("journey", "updateUser"))
-		
+
 	c.Status(http.StatusOK)
 }
